--- a/login.html
+++ b/login.html
@@ -60,8 +60,12 @@
         
         </div>
         <div id="two">
-           <div> <img src="https://bizweb.dktcdn.net/thumb/1024x1024/100/347/092/products/active-core-crew-socks-3-pairs-black-gh0331-02-standard.jpg" width="170"> </div>
-            <div> <button>Move to Bag</button> </div>
+           <div> 
+               <img src="https://bizweb.dktcdn.net/thumb/1024x1024/100/347/092/products/active-core-crew-socks-3-pairs-black-gh0331-02-standard.jpg" width="170"> 
+            </div>
+            <div>
+                <button>Move to Bag</button>
+            </div>
         </div>
         </div>
         <p>__________________________________________________________</p>
